validated the password in the register form in a specific style.

--- a/Index.html
+++ b/Index.html
@@ -10,7 +10,6 @@
 </head>
 <body>
     <div class="box">
-        <form name="RegForm" >
             <h1>Login </h1>
             <div class="group">
                 <label for="email" class="lbl">Email: </label>
@@ -20,12 +19,11 @@
                 <label for="password" class="lbl">Password: </label>
                 <input type="password" id="password" class="input" placeholder="Enter password" />
             </div>
-            <div class="group2">
+            <div class="group">
                 <p><a href="">Forgot password?</a></p>
                 <button class="btn" id="submit" name="submit">SIGN IN</button>
             </div>
             <p class="not-remember">Not a member? <a href="Register.html"> Register</a></p>
-        </form>
     </div>
     <script src="Validate.js"></script>
 </body>
