--- a/Register.html
+++ b/Register.html
@@ -10,7 +10,6 @@
 </head>
 <body>
     <div class="box2">
-        <form name="RegForm">
             <div class="group">
                 <label for="name" class="lbl">Name: </label>
                 <input type="text" id="name" class="input" name="name" placeholder="Enter name">
@@ -31,11 +30,10 @@
                 <label for="password2" class="lbl">Repeat Password: </label>
                 <input type="password" id="password2" class="input" name="Repeat_password" placeholder="Repeat password">
             </div>
-            <div class="group2">
+            <div class="group">
                 <button class="btn" id="submit" name="submit">SIGN IN</button>
             </div>
             <p class="not-remember">already have an account? <a href="Index.html"> login</a></p>
-        </form>
     </div>
     <script src="Validate.js"></script>
 </body>
