--- a/Index.html
+++ b/Index.html
@@ -6,24 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <title>Login</title>
+    <title>Register</title>
 </head>
 <body>
-    <div class="box">
-            <h1>Login </h1>
+    <div class="box2">
+            <h1>Sign up </h1>
+            <div class="group">
+                <label for="name" class="lbl">Name: </label>
+                <input type="text" id="name" class="input" name="name" placeholder="Enter name">
+            </div>
+            <div class="group">
+                <label for="username" class="lbl">Username: </label>
+                <input type="text" id="username" class="input" name="username" placeholder="Enter username" />
+            </div>
             <div class="group">
                 <label for="email" class="lbl">Email: </label>
-                <input type="email" id="email" class="input" placeholder="Enter email">
+                <input type="email" id="email" class="input" name="email" placeholder="Enter email">
             </div>
             <div class="group">
                 <label for="password" class="lbl">Password: </label>
-                <input type="password" id="password" class="input" placeholder="Enter password" />
+                <input type="password" id="password" class="input" name="password" placeholder="Enter password" />
             </div>
             <div class="group">
-                <p><a href="">Forgot password?</a></p>
+                <label for="password2" class="lbl">Repeat Password: </label>
+                <input type="password" id="password2" class="input" name="Repeat_password" placeholder="Repeat password">
+            </div>
+            <div class="group">
                 <button class="btn" id="submit" name="submit">SIGN IN</button>
             </div>
-            <p class="not-remember">Not a member? <a href="Register.html"> Register</a></p>
+            <p class="not-remember">already have an account? <a href="login.html"> login</a></p>
     </div>
     <script src="Validate.js"></script>
 </body>
