added a new page for the merge sort with a new js file

--- a/mergeSort.html
+++ b/mergeSort.html
@@ -11,8 +11,11 @@
 <body>
     <div class="box">
         <h1>Merge Sort</h1>
-        <div class="smallBox" id="smallBox"></div>
+        <div class="smallBox" >
+            <p class="p_smallBox" id="smallBox">--</p>
+        </div>
     </div>
+    <script src="mergeSort.js"></script>
 
 </body>
 </html>
