--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="box">
-            <h1>Login </h1>
+            <h1 id="login">Login </h1>
             <div class="group">
                 <label for="email" class="lbl">Email: </label>
                 <input type="email" id="email" class="input" placeholder="Enter email">
