added the palindrom part with Recursive function in Javascript file to check if a string is palindrome or not

--- a/palindrom.html
+++ b/palindrom.html
@@ -10,15 +10,20 @@
 </head>
 <body>
     <div class="box">
-        <h1>Merge Sort</h1>
-        <div class="smallBox" >
+        <h1>Palindrom</h1>
+        <!-- <div class="smallBox2" >
             <p class="p_smallBox" id="smallBox">--</p>
+        </div> -->
+        <input type="text" id="string" class="input string" name="string" placeholder="Enter string">
+        <div class="palindrom">
+            <p class="palin" id="palindrom">_ </p>
         </div>
         <div class="next">
+            <button class="btn btnNext btnN" id="check">check</button>
             <button class="btn btnNext" id="next">Next</button>
         </div>
     </div>
-    <script src="mergeSort.js"></script>
+    <script src="palindrom.js"></script>
 
 </body>
 </html>
