added a prime page to display ih the age input is prime or not

--- a/prime.html
+++ b/prime.html
@@ -6,21 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <title>Palindrom word</title>
+    <title>Prime Age</title>
 </head>
 <body>
     <div class="box">
-        <h1>Palindrom</h1>
-        <input type="text" id="string" class="input string" name="string" placeholder="Enter string">
+        <h1>Prime Age</h1>
+        <input type="text" id="string" class="input string" name="string" placeholder="Enter your year of birth">
         <div class="palindrom">
-            <p class="palin" id="palindrom">_ </p>
+            <p class="palin" id="prime">_ </p>
         </div>
         <div class="next">
             <button class="btn btnNext btnN" id="check">check</button>
             <button class="btn btnNext" id="next">Next</button>
         </div>
     </div>
-    <script src="palindrom.js"></script>
+    <script src="prime.js"></script>
 
 </body>
 </html>
