--- a/palindrome.html
+++ b/palindrome.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Style.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <title>Palindrom word</title>
+    <title>Palindrome Word</title>
 </head>
 <body>
     <div class="box">
@@ -20,7 +20,7 @@
             <button class="btn btnNext" id="next">Next</button>
         </div>
     </div>
-    <script src="palindrom.js"></script>
+    <script src="palindrome.js"></script>
 
 </body>
 </html>
