added a class using JS that represents a course

--- a/class.html
+++ b/class.html
@@ -34,7 +34,9 @@
             <div class="group">
                 <button class="btn" id="submit" name="submit">SUBMIT</button>
             </div>
-            <!-- <p class="not-remember">already have an account? <a href="login.html"> login</a></p> -->
+            <div class="nextClass">
+                <button class="btn btnNext" id="next">Next</button>
+            </div>
     </div>
     <script src="class.js"></script>
 </body>
